training with 3 epochs

--- a/notebooks/nepali_caption.ipynb
+++ b/notebooks/nepali_caption.ipynb
@@ -1540,7 +1540,7 @@
         "outputId": "1b9ab10f-9456-4c37-efd9-719c622ea9ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 798
+          "height": 1000
         }
       },
       "source": [
@@ -1670,7 +1670,55 @@
             "Epoch [2/3], Step [900/3236], Loss: 2.4824, Perplexity: 11.9704\n",
             "Epoch [2/3], Step [1000/3236], Loss: 2.7278, Perplexity: 15.2992\n",
             "Epoch [2/3], Step [1100/3236], Loss: 2.5495, Perplexity: 12.8012\n",
-            "Epoch [2/3], Step [1190/3236], Loss: 3.1189, Perplexity: 22.6211"
+            "Epoch [2/3], Step [1200/3236], Loss: 2.6546, Perplexity: 14.2199\n",
+            "Epoch [2/3], Step [1300/3236], Loss: 2.5328, Perplexity: 12.5886\n",
+            "Epoch [2/3], Step [1400/3236], Loss: 2.7261, Perplexity: 15.2735\n",
+            "Epoch [2/3], Step [1500/3236], Loss: 2.5469, Perplexity: 12.7681\n",
+            "Epoch [2/3], Step [1600/3236], Loss: 2.6625, Perplexity: 14.3321\n",
+            "Epoch [2/3], Step [1700/3236], Loss: 2.6163, Perplexity: 13.6850\n",
+            "Epoch [2/3], Step [1800/3236], Loss: 2.6542, Perplexity: 14.2137\n",
+            "Epoch [2/3], Step [1900/3236], Loss: 2.8007, Perplexity: 16.4567\n",
+            "Epoch [2/3], Step [2000/3236], Loss: 2.7735, Perplexity: 16.0151\n",
+            "Epoch [2/3], Step [2100/3236], Loss: 2.8500, Perplexity: 17.2883\n",
+            "Epoch [2/3], Step [2200/3236], Loss: 2.7065, Perplexity: 14.9764\n",
+            "Epoch [2/3], Step [2300/3236], Loss: 2.5529, Perplexity: 12.8439\n",
+            "Epoch [2/3], Step [2400/3236], Loss: 2.3987, Perplexity: 11.0089\n",
+            "Epoch [2/3], Step [2500/3236], Loss: 2.5522, Perplexity: 12.8349\n",
+            "Epoch [2/3], Step [2600/3236], Loss: 3.2961, Perplexity: 27.0068\n",
+            "Epoch [2/3], Step [2700/3236], Loss: 2.5313, Perplexity: 12.5698\n",
+            "Epoch [2/3], Step [2800/3236], Loss: 2.5598, Perplexity: 12.9333\n",
+            "Epoch [2/3], Step [2900/3236], Loss: 2.4233, Perplexity: 11.2834\n",
+            "Epoch [2/3], Step [3000/3236], Loss: 2.4901, Perplexity: 12.0628\n",
+            "Epoch [2/3], Step [3100/3236], Loss: 2.5537, Perplexity: 12.8543\n",
+            "Epoch [2/3], Step [3200/3236], Loss: 2.6185, Perplexity: 13.7157\n",
+            "Epoch [3/3], Step [100/3236], Loss: 2.7423, Perplexity: 15.5228\n",
+            "Epoch [3/3], Step [200/3236], Loss: 3.4540, Perplexity: 31.6268\n",
+            "Epoch [3/3], Step [300/3236], Loss: 2.4805, Perplexity: 11.9478\n",
+            "Epoch [3/3], Step [400/3236], Loss: 2.7968, Perplexity: 16.3929\n",
+            "Epoch [3/3], Step [500/3236], Loss: 3.7197, Perplexity: 41.2504\n",
+            "Epoch [3/3], Step [600/3236], Loss: 2.4582, Perplexity: 11.6839\n",
+            "Epoch [3/3], Step [700/3236], Loss: 2.5597, Perplexity: 12.9319\n",
+            "Epoch [3/3], Step [800/3236], Loss: 2.4453, Perplexity: 11.5335\n",
+            "Epoch [3/3], Step [900/3236], Loss: 2.5930, Perplexity: 13.3701\n",
+            "Epoch [3/3], Step [1000/3236], Loss: 2.5986, Perplexity: 13.4446\n",
+            "Epoch [3/3], Step [1100/3236], Loss: 2.5390, Perplexity: 12.6674\n",
+            "Epoch [3/3], Step [1200/3236], Loss: 2.5332, Perplexity: 12.5938\n",
+            "Epoch [3/3], Step [1300/3236], Loss: 2.3869, Perplexity: 10.8798\n",
+            "Epoch [3/3], Step [1400/3236], Loss: 2.5109, Perplexity: 12.3165\n",
+            "Epoch [3/3], Step [1500/3236], Loss: 2.5068, Perplexity: 12.2657\n",
+            "Epoch [3/3], Step [1600/3236], Loss: 2.6214, Perplexity: 13.7556\n",
+            "Epoch [3/3], Step [1700/3236], Loss: 2.3372, Perplexity: 10.3519\n",
+            "Epoch [3/3], Step [1800/3236], Loss: 2.8210, Perplexity: 16.7943\n",
+            "Epoch [3/3], Step [1900/3236], Loss: 2.6075, Perplexity: 13.5647\n",
+            "Epoch [3/3], Step [2000/3236], Loss: 2.4267, Perplexity: 11.3215\n",
+            "Epoch [3/3], Step [2100/3236], Loss: 2.3102, Perplexity: 10.0767\n",
+            "Epoch [3/3], Step [2200/3236], Loss: 2.5364, Perplexity: 12.6346\n",
+            "Epoch [3/3], Step [2300/3236], Loss: 2.4413, Perplexity: 11.4880\n",
+            "Epoch [3/3], Step [2400/3236], Loss: 2.4577, Perplexity: 11.6777\n",
+            "Epoch [3/3], Step [2500/3236], Loss: 2.3505, Perplexity: 10.4904\n",
+            "Epoch [3/3], Step [2600/3236], Loss: 3.4483, Perplexity: 31.4483\n",
+            "Epoch [3/3], Step [2700/3236], Loss: 2.8766, Perplexity: 17.7534\n",
+            "Epoch [3/3], Step [2793/3236], Loss: 2.6717, Perplexity: 14.4652"
           ],
           "name": "stdout"
         }
@@ -1724,7 +1772,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "data_loader = get_loader(transform=transform_test,    \n",
+        "                         mode='test')"
       ],
       "execution_count": 0,
       "outputs": []
