--- a/notebooks/nepali_caption.ipynb
+++ b/notebooks/nepali_caption.ipynb
@@ -1800,10 +1800,10 @@
       "metadata": {
         "id": "wYKbjAzFI7-x",
         "colab_type": "code",
-        "outputId": "77a32e79-2f38-49ea-fdc3-df15e0b390b1",
+        "outputId": "aea1da47-38aa-4664-bbf5-903c951b5509",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
+          "height": 1000
         }
       },
       "source": [
@@ -1960,7 +1960,100 @@
             "Epoch [1/4], Step [1700/3236], Loss: 3.0067, Perplexity: 20.2210\n",
             "Epoch [1/4], Step [1800/3236], Loss: 3.1106, Perplexity: 22.4346\n",
             "Epoch [1/4], Step [1900/3236], Loss: 2.8830, Perplexity: 17.8680\n",
-            "Epoch [1/4], Step [1941/3236], Loss: 2.8090, Perplexity: 16.5937"
+            "Epoch [1/4], Step [2000/3236], Loss: 3.0464, Perplexity: 21.0391\n",
+            "Epoch [1/4], Step [2100/3236], Loss: 2.8919, Perplexity: 18.0268\n",
+            "Epoch [1/4], Step [2200/3236], Loss: 2.7957, Perplexity: 16.3744\n",
+            "Epoch [1/4], Step [2300/3236], Loss: 2.9055, Perplexity: 18.2745\n",
+            "Epoch [1/4], Step [2400/3236], Loss: 2.8779, Perplexity: 17.7770\n",
+            "Epoch [1/4], Step [2500/3236], Loss: 2.9284, Perplexity: 18.6982\n",
+            "Epoch [1/4], Step [2600/3236], Loss: 2.8550, Perplexity: 17.3739\n",
+            "Epoch [1/4], Step [2700/3236], Loss: 3.0833, Perplexity: 21.8302\n",
+            "Epoch [1/4], Step [2800/3236], Loss: 2.7926, Perplexity: 16.3242\n",
+            "Epoch [1/4], Step [2900/3236], Loss: 3.4206, Perplexity: 30.5893\n",
+            "Epoch [1/4], Step [3000/3236], Loss: 2.9394, Perplexity: 18.9053\n",
+            "Epoch [1/4], Step [3100/3236], Loss: 3.0364, Perplexity: 20.8303\n",
+            "Epoch [1/4], Step [3200/3236], Loss: 2.8373, Perplexity: 17.0700\n",
+            "Epoch [2/4], Step [100/3236], Loss: 2.8814, Perplexity: 17.8399\n",
+            "Epoch [2/4], Step [200/3236], Loss: 2.8212, Perplexity: 16.7972\n",
+            "Epoch [2/4], Step [300/3236], Loss: 2.7932, Perplexity: 16.3329\n",
+            "Epoch [2/4], Step [400/3236], Loss: 2.9474, Perplexity: 19.0566\n",
+            "Epoch [2/4], Step [500/3236], Loss: 2.9385, Perplexity: 18.8878\n",
+            "Epoch [2/4], Step [600/3236], Loss: 2.9175, Perplexity: 18.4943\n",
+            "Epoch [2/4], Step [700/3236], Loss: 2.7637, Perplexity: 15.8578\n",
+            "Epoch [2/4], Step [800/3236], Loss: 2.7390, Perplexity: 15.4709\n",
+            "Epoch [2/4], Step [900/3236], Loss: 2.6412, Perplexity: 14.0302\n",
+            "Epoch [2/4], Step [1000/3236], Loss: 2.5886, Perplexity: 13.3116\n",
+            "Epoch [2/4], Step [1100/3236], Loss: 2.5851, Perplexity: 13.2652\n",
+            "Epoch [2/4], Step [1200/3236], Loss: 3.0626, Perplexity: 21.3840\n",
+            "Epoch [2/4], Step [1300/3236], Loss: 2.8680, Perplexity: 17.6026\n",
+            "Epoch [2/4], Step [1400/3236], Loss: 3.1191, Perplexity: 22.6266\n",
+            "Epoch [2/4], Step [1500/3236], Loss: 2.6049, Perplexity: 13.5303\n",
+            "Epoch [2/4], Step [1600/3236], Loss: 2.6509, Perplexity: 14.1667\n",
+            "Epoch [2/4], Step [1700/3236], Loss: 2.7097, Perplexity: 15.0244\n",
+            "Epoch [2/4], Step [1800/3236], Loss: 2.6456, Perplexity: 14.0914\n",
+            "Epoch [2/4], Step [1900/3236], Loss: 2.7414, Perplexity: 15.5082\n",
+            "Epoch [2/4], Step [2000/3236], Loss: 2.5703, Perplexity: 13.0691\n",
+            "Epoch [2/4], Step [2100/3236], Loss: 2.6190, Perplexity: 13.7226\n",
+            "Epoch [2/4], Step [2200/3236], Loss: 2.6970, Perplexity: 14.8349\n",
+            "Epoch [2/4], Step [2300/3236], Loss: 2.5643, Perplexity: 12.9911\n",
+            "Epoch [2/4], Step [2400/3236], Loss: 2.6053, Perplexity: 13.5359\n",
+            "Epoch [2/4], Step [2500/3236], Loss: 2.5782, Perplexity: 13.1736\n",
+            "Epoch [2/4], Step [2600/3236], Loss: 2.6800, Perplexity: 14.5845\n",
+            "Epoch [2/4], Step [2700/3236], Loss: 2.4629, Perplexity: 11.7392\n",
+            "Epoch [2/4], Step [2800/3236], Loss: 2.5516, Perplexity: 12.8270\n",
+            "Epoch [2/4], Step [2900/3236], Loss: 2.5010, Perplexity: 12.1948\n",
+            "Epoch [2/4], Step [3000/3236], Loss: 2.5381, Perplexity: 12.6555\n",
+            "Epoch [2/4], Step [3100/3236], Loss: 2.5278, Perplexity: 12.5262\n",
+            "Epoch [2/4], Step [3200/3236], Loss: 2.6724, Perplexity: 14.4747\n",
+            "Epoch [3/4], Step [100/3236], Loss: 2.4462, Perplexity: 11.5440\n",
+            "Epoch [3/4], Step [200/3236], Loss: 2.5692, Perplexity: 13.0560\n",
+            "Epoch [3/4], Step [300/3236], Loss: 2.4216, Perplexity: 11.2635\n",
+            "Epoch [3/4], Step [400/3236], Loss: 3.1929, Perplexity: 24.3594\n",
+            "Epoch [3/4], Step [500/3236], Loss: 2.6066, Perplexity: 13.5535\n",
+            "Epoch [3/4], Step [600/3236], Loss: 2.4182, Perplexity: 11.2255\n",
+            "Epoch [3/4], Step [700/3236], Loss: 2.6963, Perplexity: 14.8255\n",
+            "Epoch [3/4], Step [800/3236], Loss: 2.4570, Perplexity: 11.6698\n",
+            "Epoch [3/4], Step [900/3236], Loss: 2.5270, Perplexity: 12.5163\n",
+            "Epoch [3/4], Step [1000/3236], Loss: 2.5884, Perplexity: 13.3090\n",
+            "Epoch [3/4], Step [1100/3236], Loss: 2.5769, Perplexity: 13.1565\n",
+            "Epoch [3/4], Step [1200/3236], Loss: 2.7196, Perplexity: 15.1735\n",
+            "Epoch [3/4], Step [1300/3236], Loss: 2.5115, Perplexity: 12.3237\n",
+            "Epoch [3/4], Step [1400/3236], Loss: 2.6021, Perplexity: 13.4917\n",
+            "Epoch [3/4], Step [1500/3236], Loss: 2.3069, Perplexity: 10.0433\n",
+            "Epoch [3/4], Step [1600/3236], Loss: 2.5223, Perplexity: 12.4577\n",
+            "Epoch [3/4], Step [1700/3236], Loss: 3.3797, Perplexity: 29.3621\n",
+            "Epoch [3/4], Step [1800/3236], Loss: 2.4618, Perplexity: 11.7264\n",
+            "Epoch [3/4], Step [1900/3236], Loss: 2.4392, Perplexity: 11.4643\n",
+            "Epoch [3/4], Step [2000/3236], Loss: 2.6947, Perplexity: 14.8012\n",
+            "Epoch [3/4], Step [2100/3236], Loss: 2.5805, Perplexity: 13.2032\n",
+            "Epoch [3/4], Step [2200/3236], Loss: 2.5222, Perplexity: 12.4562\n",
+            "Epoch [3/4], Step [2300/3236], Loss: 2.3464, Perplexity: 10.4483\n",
+            "Epoch [3/4], Step [2400/3236], Loss: 2.4269, Perplexity: 11.3238\n",
+            "Epoch [3/4], Step [2500/3236], Loss: 2.3488, Perplexity: 10.4725\n",
+            "Epoch [3/4], Step [2600/3236], Loss: 2.4503, Perplexity: 11.5921\n",
+            "Epoch [3/4], Step [2700/3236], Loss: 2.3782, Perplexity: 10.7858\n",
+            "Epoch [3/4], Step [2800/3236], Loss: 2.4001, Perplexity: 11.0238\n",
+            "Epoch [3/4], Step [2900/3236], Loss: 2.5640, Perplexity: 12.9876\n",
+            "Epoch [3/4], Step [3000/3236], Loss: 2.4893, Perplexity: 12.0532\n",
+            "Epoch [3/4], Step [3100/3236], Loss: 2.5792, Perplexity: 13.1872\n",
+            "Epoch [3/4], Step [3200/3236], Loss: 2.8963, Perplexity: 18.1072\n",
+            "Epoch [4/4], Step [100/3236], Loss: 3.4213, Perplexity: 30.6077\n",
+            "Epoch [4/4], Step [200/3236], Loss: 2.4699, Perplexity: 11.8218\n",
+            "Epoch [4/4], Step [300/3236], Loss: 2.7844, Perplexity: 16.1906\n",
+            "Epoch [4/4], Step [400/3236], Loss: 2.3458, Perplexity: 10.4417\n",
+            "Epoch [4/4], Step [500/3236], Loss: 2.4310, Perplexity: 11.3707\n",
+            "Epoch [4/4], Step [600/3236], Loss: 2.4543, Perplexity: 11.6379\n",
+            "Epoch [4/4], Step [700/3236], Loss: 2.3336, Perplexity: 10.3151\n",
+            "Epoch [4/4], Step [800/3236], Loss: 2.5944, Perplexity: 13.3889\n",
+            "Epoch [4/4], Step [900/3236], Loss: 2.5380, Perplexity: 12.6541\n",
+            "Epoch [4/4], Step [1000/3236], Loss: 2.4441, Perplexity: 11.5198\n",
+            "Epoch [4/4], Step [1100/3236], Loss: 2.4041, Perplexity: 11.0689\n",
+            "Epoch [4/4], Step [1200/3236], Loss: 2.4801, Perplexity: 11.9430\n",
+            "Epoch [4/4], Step [1300/3236], Loss: 2.3929, Perplexity: 10.9451\n",
+            "Epoch [4/4], Step [1400/3236], Loss: 2.4015, Perplexity: 11.0401\n",
+            "Epoch [4/4], Step [1500/3236], Loss: 2.3098, Perplexity: 10.0723\n",
+            "Epoch [4/4], Step [1600/3236], Loss: 2.3430, Perplexity: 10.4126\n",
+            "Epoch [4/4], Step [1687/3236], Loss: 2.2914, Perplexity: 9.8884"
           ],
           "name": "stdout"
         }
